# Tracy

./: LICENSE  README.md  manifest.in  pyproject.toml  setup.py
tracy/: __init__.py  __main__.py  canvas_tools.py  canvases.py  gaussian_tools.py  navigator.py  roi_tools.py  style.qss
tracy/canvas_tools/: __init__.py  _shared.py  animators.py  controls.py  dialogs.py  layout.py  recalc.py  tooltips.py  widgets.py
tracy/canvases/: __init__.py  _shared.py  base.py  histogram.py  intensity.py  kymo.py  movie.py  trajectory.py  velocity.py
tracy/navigator/: __init__.py  _shared.py  analysis.py  autopick.py  colors.py  extra_calculations.py  input.py  io.py  kymo.py  main.py  movie.py  roi.py  ui.py
tracy/tools/: __init__.py  classification.py  gaussian_tools.py  roi_tools.py  track_tools.py
